# tauri-practice

./: .env  .gitignore  Cargo.toml  index.html  package.json  vite.config.ts
.sqlx/: query-2b3e6678445148cdd1b565a3079c611e70a98b6353fc02d1aca770cbec44db0a.json  query-830b2e62a9de1934865df59609665a17e1eab36e02cc83fc0ceb97d2359994ac.json
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/repository/: Cargo.toml
crates/repository/migrations/: 1_init.sql  2_author.sql
crates/repository/src/: lib.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src/: lib.rs  main.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui/: App.tsx  main.tsx  reset.css.ts
ui/api/: bindings.gen.ts  hooks.ts  mutation_keys.ts
ui/pages/: Chat.tsx
ui/pages/Chat/: Chat.tsx  chat.css.ts
ui/pages/Chat/components/: IconButton.tsx  Textarea.tsx  icon_button.css.ts  textarea.css.ts
