[package]
name = "tauri-practice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_practice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = "2"
serde_json = "1"
anyhow = { workspace = true }
messaging = { path = "../messaging" }
model = { path = "../model" }
repository = { path = "../repository" }
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["function"] }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true, features = ["typescript"] }
voice = { path = "../voice" }
