[package]
name = "voice"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
const_format = { workspace = true }
rodio = { workspace = true, default-features = false, features = ["playback", "wav"] }
voicevox_core = { workspace = true, features = ["load-onnxruntime"] }
